<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:elevation="0dp"
    android:clipToPadding="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/debt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="8dp"
        app:theme="@style/ToolBarStyle" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="8dp"
        android:layout_below="@+id/debt_toolbar"
        android:layout_alignParentStart="true"
        android:clipToPadding="true"
        android:paddingBottom="16dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtIL_who"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:theme="@style/TextLabel"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_name"
                android:layout_weight="1"
                android:hint="@string/who"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtIL_what"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:theme="@style/TextLabel"
            android:hint="@string/amount"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/radioGroup1"
            app:layout_constraintRight_toLeftOf="@+id/spn_currency"
            app:layout_constraintTop_toTopOf="@+id/radioGroup1"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.19">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txt_who"
                android:textSize="18sp"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/spn_currency"
            android:background="@color/primary"
            app:layout_constraintRight_toRightOf="@+id/txtIL_who"
            app:layout_constraintBottom_toBottomOf="@+id/txtIL_what" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup1"
            app:layout_constraintLeft_toLeftOf="@+id/txtIL_who"
            android:checkedButton="@+id/rdio_money"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtIL_who">

            <RadioButton
                android:text="@string/thing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdio_thing"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:checked="false"/>
            <RadioButton
                android:text="@string/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdio_money"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup2"
            app:layout_constraintLeft_toLeftOf="@+id/radioGroup1"
            app:layout_constraintRight_toRightOf="@+id/spn_currency"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1">

            <RadioButton
                android:text="@string/i_owe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdio_my_debt"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:checked="true"/>
            <RadioButton
                android:text="@string/they_owe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdio_their_debt"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"/>
        </RadioGroup>


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_done_white_24dp"
        android:transitionName="@string/transition_button"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="-32dp"
        android:layout_below="@+id/contraintLayout"
        android:layout_alignParentEnd="true"
        android:elevation="24dp"
        app:elevation="24dp"
        app:borderWidth="0dp"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/contraintLayout"
        android:layout_alignParentBottom="true">

        <CheckBox
            android:text="@string/locked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chck_locked"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="@+id/txt_note"
            app:layout_constraintTop_toBottomOf="@+id/txt_note"
            android:layout_marginTop="8dp" />

        <Button
            android:text="2017/12/12 24:12:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_created_at"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_alignBaseline="@+id/btn_delete"
            android:layout_alignBottom="@+id/btn_delete"
            android:layout_alignParentEnd="true"
            app:layout_constraintRight_toRightOf="@+id/txt_note"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chck_locked" />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/txt_created_at_label"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/txt_note"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint=""
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/btn_created_at"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_created_at_label"
            android:textColor="@color/black"
            android:gravity="end|center"
            android:layout_above="@+id/btn_created_at"
            app:layout_constraintTop_toTopOf="@+id/btn_created_at"
            app:layout_constraintBottom_toBottomOf="@+id/btn_created_at"
            app:layout_constraintLeft_toLeftOf="@+id/txt_note"
            app:layout_constraintRight_toLeftOf="@+id/btn_created_at"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>

