<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:padding="0dp">

    <Button
        android:text="@string/friend_add_a_new_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_new_debt"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp" />

    <TextView
        android:text="Jmeno Uzivatele"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/txt_name"
        android:gravity="center|start"
        android:textSize="18sp"
        android:layout_alignTop="@+id/btn_add_new_debt"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/btn_add_new_debt"
        app:layout_constraintTop_toTopOf="@+id/btn_add_new_debt"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_new_debt"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:ellipsize="end"
        app:layout_constraintRight_toLeftOf="@+id/btn_add_new_debt"
        android:layout_marginEnd="8dp"
        android:paddingBottom="2dp"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:text="@string/pay_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pay_selected"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_label" />

    <TextView
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_total_label"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lst_debts" />

    <TextView
        android:text="5621 Kc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_total"
        android:gravity="center|end"
        app:layout_constraintTop_toTopOf="@+id/txt_total_label"
        app:layout_constraintBottom_toBottomOf="@+id/txt_total_label"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/txt_total_label"
        android:textSize="18sp" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="267dp"
        android:id="@+id/lst_debts"
        android:fadeScrollbars="false"
        android:scrollIndicators="top|bottom"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_debt"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>